<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".question.QuestionActivity">

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Question" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView">

        <Button
            android:id="@+id/option1Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOptionButtonClicked"
            android:tag="1"
            android:text="Button"
            tools:text="Option 1" />

        <Button
            android:id="@+id/option2Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button"
            android:tag="2"
            android:onClick="onOptionButtonClicked"
            tools:text="Option 2" />

        <Button
            android:id="@+id/option3Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button"
            android:tag="3"
            android:onClick="onOptionButtonClicked"
            tools:text="Option 3" />

    </LinearLayout>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="Result" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView">

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="onNextButtonClicked"
            android:text="Button"
            tools:text="Next" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <Button
            android:id="@+id/cheatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="onCheatButtonClicked"
            android:text="Button"
            tools:text="Cheat" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>